fix: footer spacing

--- a/client/style/footer.styl
+++ b/client/style/footer.styl
@@ -14,5 +14,7 @@
     font-size 12px
     font-weight normal
     line-height header_height
+  a
+    margin 0
   a:hover
     color #ddd
